<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Переводчик</string>
    <string name="translate">Перевести</string>
    <string name="from_lang">Перевести с</string>
    <string name="to_lang">на</string>
    <string name="lang_not_selected">Язык не выбран</string>
    <string name="result">Результат</string>
    <string name="select_original_lang">Выберите язык оригинала</string>
    <string name="select_result_lang">Выберите язык перевода</string>
    <string name="select_lang">Выберите язык</string>
    <string name="title_activity_select_from">SelectFromActivity</string>
    <string name="wait_for_translate">Идет перевод.\nПожалуйста, подождите</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_to">SelectToActivity</string>
    <string name="translation_cancelled">Процедура перевода отменена</string>
    <string name="connection_error">Произошла ошибка соединения</string>
    <string name="translate_error">Произошла ошибка перевода</string>

    // API
    <string name="apiKey">trnsl.1.1.20150302T070606Z.ae16c8413b9d2123.03d6ce974ad95e39f0acb8ece6411819c3bab05d</string>
    <string name="apiURL">https://translate.yandex.net/api/v1.5/tr.json/translate</string>

    // Языки
    <string name="ru">Русский</string>
    <string name="en">Английский</string>
    <string name="fr">Французский</string>
    <string name="sq">Албанский</string>
    <string name="ar">Арабский</string>
    <string name="hy">Армянский</string>
    <string name="az">Азербайджанский</string>
    <string name="be">Белорусский</string>
    <string name="bg">Болгарский</string>
    <string name="bs">Боснийский</string>
    <string name="vi">Вьетнамский</string>
    <string name="hu">Венгерский</string>
    <string name="nl">Голландский</string>
    <string name="el">Греческий</string>
    <string name="ka">Грузинский</string>
    <string name="da">Датский</string>
    <string name="he">Иврит</string>
    <string name="id">Индонезийский</string>
    <string name="it">Итальянский</string>
    <string name="is">Исландский</string>
    <string name="es">Испанский</string>
    <string name="ca">Каталанский</string>
    <string name="zh">Китайский</string>
    <string name="lv">Латышский</string>
    <string name="lt">Литовский</string>
    <string name="ms">Малайский</string>
    <string name="mt">Мальтийский</string>
    <string name="mk">Македонский</string>
    <string name="de">Немецкий</string>
    <string name="no">Норвежский</string>
    <string name="pl">Польский</string>
    <string name="pt">Португальский</string>
    <string name="ro">Румынский</string>
    <string name="sr">Сербский</string>
    <string name="sk">Словацкий</string>
    <string name="sl">Словенский</string>
    <string name="th">Тайский</string>
    <string name="tr">Турецкий</string>
    <string name="uk">Украинский</string>
    <string name="fi">Финский</string>
    <string name="hr">Хорватский</string>
    <string name="cs">Чешский</string>
    <string name="sv">Шведский</string>
    <string name="et">Эстонский</string>
</resources>
