<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/translate"
        android:layout_below="@+id/select_to_button"
        android:layout_marginTop="20dip"
        android:lines="8" />

    <TextView
        android:id="@+id/textViewFromLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from_lang"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/select_from_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_lang"
        android:layout_below="@+id/textViewFromLang"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/textViewToLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to_lang"
        android:layout_below="@+id/select_from_button" />

    <Button
        android:id="@+id/select_to_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_lang"
        android:layout_below="@+id/textViewToLang"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/buttonTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:layout_below="@+id/editTextInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />
</RelativeLayout>